--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
     "name": "com.limpin.customconsole",
     "displayName": "Custom Console",
     "version": "1.0.0",
-    "unity": "2019.1",
+    "unity": "2020.3",
+    "dependencies": {
+      "com.unity.inputsystem": "1.5.1"
+    },
     "description": "A custom console for Unity builds",
     "keywords": [ "console", "debug", "tools", "custom console", "in build" ],
     "category": "tools",
